<resources>
    <string name="app_name">StudentTracker</string>
    <string name="first_name">First name</string>
    <string name="last_name">last name</string>
    <string name="phone_number">Phone number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_student">Add a new student</string>
    <string name="StudentInfo">Student Information</string>
    <string name="open_info">INFO</string>
    <string name="edit">Edit</string>
    <string name="student_menu">Student</string>
    <string name="lesson_menu">Lesson</string>
    <string name="lesson_title">Lessons</string>
    <string name="student_title">Students</string>
    <string name="add_student_title">Add student</string>
    <string name="edit_student_title">Edit student</string>
    <string name="student_detail_title">Student detail</string>
    <string name="add_lesson_title">Add lesson</string>
    <string name="edit_lesson_title">Edit lesson</string>
    <string name="lesson_detail_title">Lesson detail</string>
    <string name="lesson_amount_total">total lesson: </string>
    <string name="lesson_amount_month">month lesson: </string>
    <string name="logout">logout</string>
</resources>